<resources>
    <string name="app_name">UniTripS</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to UI -->
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="action_register">Create account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="confirmedPassword">Confirm Password</string>
    <string name="title_email">Email</string>
    <string name="createAccount">Create Your UniTripS account</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_Retry">Try Again</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_setting">setting</string>
    <string name="New_Event">New Event</string>
    <string name="transport_setting">Transport Setting</string>
    <string name="import_calendar">Add calendar</string>
    <string name="dialog_ok">OK</string>
    <string name="action_back_home">Home</string>
    <string name="import_description">From UTS myTimetable</string>
    <string name="prompt_StudentId">Student ID </string>
    <string name="prompt_password">Password</string>
    <string name="action_Import">Import</string>
    <string name="action_log_out">Logout</string>
    <string name="action_Sign_in">Sign in</string>
    <string name="action_Sign_up">Sign up</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_resetPassword">Reset Your Password</string>
    <string name="hint_resetPassword">Enter the email address you used to sign up</string>
    <string name="resetPasswordSend">A reset password link has been sent to your email address! Please check your email!</string>
    <string name="hint_restPasswordEmailEt">Enter your email address...</string>
    <string name="button_submit">Submit</string>
    <string name="hint_calendarName">Set a name for your new calendar</string>
    <string name="title_calendarName">Calendar Name</string>
    <string name="title_event_title">Title</string>
    <string name="hint_addEventTitle">Title of your event</string>
    <string name="title_timePicker">Event time</string>
    <string name="hint_event_start_time">Event start time</string>
    <string name="hint_event_end_time">Event end time</string>
    <string name="title_eventLocation">Event Location</string>
    <string name="hint_event_location">Add a location for you event</string>
    <string name="hint_notification_time">Notification time</string>
    <string name="text_addEvent_save_btn">Save Event</string>
    <string name="text_addUserProfile_save_btn">Save</string>
    <string name="title_default_transport_option">Preferred Transport: </string>
    <string name="user_preference">My preference</string>
    <string name="title_notificationTime_setting">Notification Time: </string>
    <string name="title_preferred_arrival_time">Arrival: </string>
    <string name="NotificationTime">Notification Time</string>
    <string name="hint_set_preference">Set your preference for transport and notification.</string>
    <string name="hint_notification_time_description">UniTrips will remind you before your schedule.</string>
    <string name="hint_preferred_transport_description">UniTripS will provide the routes by the transportation.</string>
    <string name="hint_arrival_time_description">UniTrips will provide a public transport time that matching your preferred arrival time before your schedule time.</string>
    <string name="title_timeout">Connection Timeout</string>
    <string name="welcome">Welcome to UniTripS!</string>
    <string name="hours">hrs</string>
    <string name="Course_Title">Course Detail</string>
    <string name="userSetting_success">Update user preference success !</string>
    <string name="title_settingFail">Update Fail</string>
    <string name="update_fail">Oops! Fail to update your setting. Please try again !</string>

    <!-- Strings related to error message -->
    <string name="error_invalid_email">Invalid email address!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">Invalid password! Password should be at least 6 characters.</string>
    <string name="confirmPassword_error">Password and confirm password do not match!</string>
    <string name="sign_fail_message">Authentication failed. Please double check your login detail.</string>
    <string name="resetPassword_Error">Fail to send the reset password link! Please try again!</string>
    <string name="Internet_Connection_error">Oops! It seems like UniTrip has lost connection with the server! Please double check your internet connection and try again!</string>


    <!-- Strings related to UTS myTimeTable server -->
    <string name="fail_connection">Fail to connect the server! Please check your Internet connection!</string>
    <string name="no_response">server not response! Please try again!</string>
    <string name="storedSuccess">Import calendar successful!</string>
    <string name="incorrect_login_Detail">Incorrect student ID or password!</string>

    <!-- Strings related to firebase -->
    <string name="firebase_invalidEmail_exception">The input email address does not exist! Please try again...</string>
    <string name="existEmailError">You input email address has been used. Please try again...</string>
    <string name="firebase_password_incorrect_exception">The input email and password do not match! Please try again...</string>
    <string name="firebase_Timetable_upload_successful">Timetable upload successful!</string>
    <string name="firebase_Timetable_upload_fail">Fail to store your calendar to firebase. Please try again!</string>
    <string name="title_tryAgain">Try Again</string>

    <!-- Strings related to spinners -->
    <string-array name="Transport_setting_spinnerWidget_item">
        <item>Train</item>
        <item>Bus</item>
        <item>Ferry</item>
        <item>Light Rail</item>
    </string-array>
    <string-array name="NotificationTime_setting_spinnerWidget_Hours_item">
        <item>HH</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="NotificationTime_setting_spinnerWidget_Min_item">
        <item>MM</item>
        <item>00</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string name="title_activity_find_trip_maps">Map</string>
    <!-- FQA view -->
    <string name="question_one">Q1: How can I login to the app when I forgot my Password ?</string>
    <string name="question_two">Q2: If the UTS timetable calendar was changed, how can I update the new calendar to the homepage ?</string>
    <string name="question_three">Q3: How can I get the real time location and transport information in the home page when I changed location and events ?</string>
    <string name="question_four">There is the contact details which you can contact us if you have any questions.</string>
    <string name="answer_one">You can reset your password in login page, there is a link to reset password page.When you submit the email you used to login, you will received an email which have a link to set the new password.</string>
    <string name="answer_two">When you changed your UTS timetable and you want to import the new one to view the transport information, you can just import the calendar again to cover the old calendar, the App will save the new calendar to database and show it on the homepage.</string>
    <string name="answer_three">Press the home button, the home page and the google map page will refresh, so that you can get the station and time you need.</string>
    <string name="answer_four">Contact us via Email: sep.project.database@gmail.com</string>
    <string name="title_FQA">FQA</string>
</resources>
