<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018. Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions an limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="15dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/warning_icon"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_warning"
        android:layout_marginLeft="20dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondaryBtnClicked"
        android:layout_gravity="center"
        android:padding="20dp"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">
        <Button
            android:id="@+id/dialog_logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:text="@string/action_log_out"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:background="@drawable/sign_up_btn_selector"/>
        <Button
            android:id="@+id/dialog_cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textStyle="bold"
            android:background="@drawable/sign_in_btn_selector"/>
    </LinearLayout>


</LinearLayout>